# ChangeLog for media-libs/libbluray
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libbluray/ChangeLog,v 1.7 2011/08/05 22:13:53 radhermit Exp $

  05 Aug 2011; Tim Harder <radhermit@gentoo.org>
  libbluray-0.0.1_pre20110210-r1.ebuild:
  Require similar libbluray-xine version.

*libbluray-0.0.1_pre20110210-r1 (05 Aug 2011)

  05 Aug 2011; Tim Harder <radhermit@gentoo.org>
  -libbluray-0.0.1_pre20110210.ebuild, +libbluray-0.0.1_pre20110210-r1.ebuild:
  Revbump and remove old. Fix build error with xine plugin (bug #355331), set
  REQUIRED_USE, and remove the libtool archive when not building static libs.
  Based on work by Martin von Gagern.

*libbluray-0.0.1_pre20110210 (10 Feb 2011)

  10 Feb 2011; Tim Harder <radhermit@gentoo.org>
  +libbluray-0.0.1_pre20110210.ebuild:
  Add development snapshot.

  04 Feb 2011; Tim Harder <radhermit@gentoo.org> libbluray-9999.ebuild:
  Add dependency on dev-java/ant-core for bug #353635. Bump to EAPI 4 and use
  diff friendly dependency lines.

  01 Feb 2011; Tim Harder <radhermit@gentoo.org> +files/90libbluray,
  libbluray-9999.ebuild:
  Add env.d file to set the libbluray classpath variable correctly.

  01 Feb 2011; Tim Harder <radhermit@gentoo.org> libbluray-9999.ebuild,
  metadata.xml:
  Update live ebuild for bug #352033 thanks to Nikoli. Update dependencies and
  add static-libs, utils, and xine USE flags. Allow for building and installing
  BD-J support.

*libbluray-9999 (17 Jul 2010)

  17 Jul 2010; Steve Dibb <beandog@gentoo.org> +libbluray-9999.ebuild,
  +metadata.xml:
  Initial commit; original ebuild from gentoo multimedia overlay
