@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libbluray
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libbluray/ChangeLog,v 1.7 2011/08/05 22:13:53 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libbluray/ChangeLog,v 1.8 2011/08/05 22:31:56 radhermit Exp $
+
+  05 Aug 2011; Tim Harder <radhermit@gentoo.org> libbluray-9999.ebuild:
+  Update live ebuild to use the git-2 eclass and new xine plugin package.
 
   05 Aug 2011; Tim Harder <radhermit@gentoo.org>
   libbluray-0.0.1_pre20110210-r1.ebuild:
